config/deploy/openshift/manifest.yaml
---
# Source: dynatrace-operator/templates/Common/webhook/service.yaml
# Copyright 2021 Dynatrace LLC

# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at

#     http://www.apache.org/licenses/LICENSE-2.0

# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
apiVersion: v1
kind: Service
metadata:
  name: dynatrace-webhook
  namespace: dynatrace
  labels:
    dynatrace.com/operator: dynakube
    internal.dynatrace.com/component: webhook
spec:
  selector:
    internal.dynatrace.com/app: webhook
    internal.dynatrace.com/component: webhook
  ports:
    - port: 443
      protocol: TCP
      targetPort: server-port
---
# Source: dynatrace-operator/templates/Common/operator/deployment-operator.yaml
# Copyright 2021 Dynatrace LLC

# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at

#     http://www.apache.org/licenses/LICENSE-2.0

# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dynatrace-operator
  namespace: dynatrace
  labels:
    dynatrace: operator
    operator: dynakube
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      name: dynatrace-operator
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        name: dynatrace-operator
        dynatrace: operator
        operator: dynakube
    spec:
      containers:
        - name: dynatrace-operator
          args:
            - operator
          # Replace this with the built image name
          image:
            docker.io/dynatrace/dynatrace-operator:v0.2.1
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: metrics
            - containerPort: 10080
              name: server-port
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 100m
              memory: 128Mi
          readinessProbe:
            httpGet:
              path: /healthz
              port: server-port
              scheme: HTTP
            initialDelaySeconds: 15
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /healthz
              port: server-port
              scheme: HTTP
            initialDelaySeconds: 15
            periodSeconds: 10
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            
              - matchExpressions:
                  - key: kubernetes.io/arch
                    operator: In
                    values:
                      - amd64
                      - arm64
                  - key: kubernetes.io/os
                    operator: In
                    values:
                      - linux
            
      serviceAccountName: dynatrace-operator
---
# Source: dynatrace-operator/templates/Common/webhook/deployment-webhook.yaml
# Copyright 2021 Dynatrace LLC

# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at

#     http://www.apache.org/licenses/LICENSE-2.0

# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dynatrace-webhook
  namespace: dynatrace
  labels:
    dynatrace.com/operator: dynakube
    internal.dynatrace.com/component: webhook
    dynatrace.com/operator: dynakube
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      internal.dynatrace.com/component: webhook
      internal.dynatrace.com/app: webhook
  strategy:
    type: RollingUpdate
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/default-logs-container: webhook
      labels:
        dynatrace.com/operator: oneagent
        internal.dynatrace.com/component: webhook
        internal.dynatrace.com/app: webhook
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: kubernetes.io/arch
                    operator: In
                    values:
                      - amd64
                      - arm64
                  - key: kubernetes.io/os
                    operator: In
                    values:
                      - linux
      containers:
        - name: webhook
          args:
            - webhook-server
          image:
            docker.io/dynatrace/dynatrace-operator:v0.2.1
          imagePullPolicy: Always
          readinessProbe:
            httpGet:
              path: /healthz
              port: server-port
              scheme: HTTPS
          ports:
            - name: metrics
              containerPort: 8383
            - name: validation
              containerPort: 8384
            - name: server-port
              containerPort: 8443
          resources:
            requests:
              cpu: 300m
              memory: 128Mi
            limits:
              cpu: 300m
              memory: 128Mi
      serviceAccountName: dynatrace-webhook
---
# Source: dynatrace-operator/templates/Openshift/operator/deployment-operator.yaml
# Copyright 2020 Dynatrace LLC

# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at

#     http://www.apache.org/licenses/LICENSE-2.0

# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: apps/v1
kind: Deployment
metadata:
  name: dynatrace-operator
  namespace: dynatrace
  labels:
    dynatrace: operator
    operator: dynakube
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      name: dynatrace-operator
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        name: dynatrace-operator
        dynatrace: operator
        operator: dynakube
    spec:
      containers:
        - name: dynatrace-operator
          args:
            - operator
          # Replace this with the built image name
          image:
            docker.io/dynatrace/dynatrace-operator:v0.2.1
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: metrics
            - containerPort: 10080
              name: server-port
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 100m
              memory: 256Mi
          readinessProbe:
            httpGet:
              path: /healthz
              port: server-port
              scheme: HTTP
            initialDelaySeconds: 15
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /healthz
              port: server-port
              scheme: HTTP
            initialDelaySeconds: 15
            periodSeconds: 10
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: kubernetes.io/arch
                    operator: In
                    values:
                      - amd64
                      - arm64
                  - key: kubernetes.io/os
                    operator: In
                    values:
                      - linux
      serviceAccountName: dynatrace-operator
---
# Source: dynatrace-operator/templates/Common/configmap.yaml
# Copyright 2021 Dynatrace LLC

# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at

#     http://www.apache.org/licenses/LICENSE-2.0

# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
---
# Source: dynatrace-operator/templates/Common/csi/daemonset.yaml
# Copyright 2021 Dynatrace LLC

# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at

#     http://www.apache.org/licenses/LICENSE-2.0

# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
---
# Source: dynatrace-operator/templates/Common/customresource-dynakube.yaml
# Copyright 2021 Dynatrace LLC

# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at

#     http://www.apache.org/licenses/LICENSE-2.0

# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
---
# Source: dynatrace-operator/templates/Common/secret.yaml
# Copyright 2021 Dynatrace LLC

# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at

#     http://www.apache.org/licenses/LICENSE-2.0

# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
---
# Source: dynatrace-operator/templates/Openshift-3.11/oneagent/securitycontextconstraints-unprivileged.yaml
# Copyright 2021 Dynatrace LLC

# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at

#     http://www.apache.org/licenses/LICENSE-2.0

# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
---
# Source: dynatrace-operator/templates/Openshift-3.11/oneagent/securitycontextconstraints.yaml
# Copyright 2021 Dynatrace LLC

# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at

#     http://www.apache.org/licenses/LICENSE-2.0

# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
---
# Source: dynatrace-operator/templates/application.yaml
# Copyright 2020 Dynatrace LLC

# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#     http://www.apache.org/licenses/LICENSE-2.0
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
---
# Source: dynatrace-operator/templates/Common/webhook/mutatingwebhookconfiguration.yaml
# Copyright 2021 Dynatrace LLC

# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at

#     http://www.apache.org/licenses/LICENSE-2.0

# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: dynatrace-webhook
  labels:
    dynatrace.com/operator: dynakube
    internal.dynatrace.com/component: webhook
webhooks:
  - name: webhook.pod.dynatrace.com
    reinvocationPolicy: IfNeeded
    failurePolicy: Ignore
    timeoutSeconds: 2
    rules:
      - apiGroups: [ "" ]
        apiVersions: [ "v1" ]
        operations: [ "CREATE" ]
        resources: [ "pods" ]
        scope: Namespaced
    namespaceSelector:
      matchExpressions:
        - key: dynakube.internal.dynatrace.com/instance
          operator: Exists
    clientConfig:
      service:
        name: dynatrace-webhook
        namespace: dynatrace
        path: /inject
    admissionReviewVersions: [ "v1beta1", "v1" ]
    sideEffects: None
  - name: webhook.ns.dynatrace.com
    reinvocationPolicy: IfNeeded
    failurePolicy: Ignore
    timeoutSeconds: 2
    rules:
      - apiGroups: [ "" ]
        apiVersions: [ "v1" ]
        operations: [ "CREATE", "UPDATE"]
        resources: [ "namespaces" ]
        scope: Cluster
    clientConfig:
      service:
        name: dynatrace-webhook
        namespace: dynatrace
        path: /label-ns
    admissionReviewVersions: [ "v1beta1", "v1" ]
    sideEffects: None
---
# Source: dynatrace-operator/templates/Common/webhook/validatingwebhookconfiguration.yaml
# Copyright 2021 Dynatrace LLC

# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at

#     http://www.apache.org/licenses/LICENSE-2.0

# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: dynatrace-webhook
  labels:
    dynatrace.com/operator: dynakube
    internal.dynatrace.com/component: webhook
webhooks:
  - admissionReviewVersions:
      - v1
      - v1beta1
      - v1alpha1
    clientConfig:
      service:
        name: dynatrace-webhook
        namespace: dynatrace
        path: /validate
    rules:
      - operations:
          - UPDATE
        apiGroups:
          - dynatrace.com
        apiVersions:
          - v1beta1
        resources:
          - dynakubes
    name: webhook.dynatrace.com
    timeoutSeconds: 2
    sideEffects: None
